# clim

./: .drom  .gitignore  CHANGES.md  LICENSE.md  Makefile  README.md  clim-ppx.opam  clim.opam  drom.toml  dune-project  ezcmdliner-ppx.opam  ezcmdliner.opam  ppx_cmdliner.opam
.github/workflows/: doc-deploy.yml  workflow.yml
docs/: index.html
docs/doc/: index.html
docs/sphinx/: index.html
lib/: clim.mli  dune  ezcmdliner.ml  ezcmdliner.mli
opam/: clim-ppx.opam  clim.opam
ppx/: dune  ppx_cmdliner.ml
sphinx/: about.rst  conf.py  index.rst  install.rst  license.rst
src/clim/: dune  index.mld  package.toml  version.mlt
src/clim-ppx/: clim_ppx.ml  dune  index.mld  package.toml
test/: dune
test/cram/: dune
test/dev/: dune  test.expected.ml
test/expect-tests/: dune
test/inline-tests/: dune
test/output-tests/: dune
test/ppx/: dune  test.expected.ml  test.ml
