
(rule
 (targets test.actual.ml)
 (deps (:pp pp.exe) (:input test.ml))
 (action (run ./%{pp} -deriving-keep-w32 both --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (libraries fmt fmt.tty fmt.cli logs.fmt logs.cli logs cmdliner)
 (preprocess (pps clim-ppx)))

(executable
 (name pp)
 (modules pp)
 (libraries clim-ppx ppxlib))